Add middleware and cookie
