# services/auth/docs/swagger.yaml
@@ -1,5 +1,17 @@
 basePath: /
 definitions:
+  main.ChangePasswordRequest:
+    properties:
+      new_password:
+        minLength: 6
+        type: string
+      old_password:
+        minLength: 6
+        type: string
+    required:
+    - new_password
+    - old_password
+    type: object
   main.LoginRequest:
     properties:
       email:
@@ -27,13 +39,37 @@ definitions:
     - password
     - username
     type: object
-host: localhost:8083
+host: localhost:8080
 info:
   contact: {}
   description: This is the authentication service for ChatOrbit.
   title: Auth Service API
   version: "1.0"
 paths:
+  /change-password:
+    post:
+      consumes:
+      - application/json
+      description: Change the password of the logged-in user
+      parameters:
+      - description: Change Password request body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/main.ChangePasswordRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Change Password
+      tags:
+      - ChangePassword
   /login:
     post:
       consumes:
@@ -58,6 +94,23 @@ paths:
       summary: Login
       tags:
       - Login
+  /logout:
+    post:
+      consumes:
+      - application/json
+      description: Logout the user by clearing the JWT cookie
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Logout
+      tags:
+      - Logout
   /register:
     post:
       consumes:
